# xhal

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile
python/: Makefile
python/reg_interface_gem/: Makefile
python/reg_interface_gem/core/: gbt_utils_extended.py  reg_extra_ops.py
xcompile/: Makefile
xcompile/ipbus/: Client.cpp  Client.h  Makefile  ipbus.cpp
xhal/: Makefile  spec.template  xhal.mk
xhal/include/: packageinfo.h
xhal/include/xhal/client/: XHALDevice.h  XHALInterface.h
xhal/include/xhal/client/rpcman/: calibration_routines.h  daq_monitor.h  optohybrid.h  utils.h  vfat3.h
xhal/include/xhal/common/rpc/: call.h  common.h  compat.h  exceptions.h  helper.h  register.h
xhal/include/xhal/common/utils/: Exception.h  XHALXMLNode.h  XHALXMLParser.h
xhal/include/xhal/rpc/: common.h
xhal/include/xhal/server/: LMDB.h
xhal/src/client/: XHALDevice.cpp  XHALInterface.cpp
xhal/src/client/python_wrappers/: XHALInterface_python.cpp
xhal/src/client/rpc_manager/: calibration_routines.cpp  daq_monitor.cpp  optohybrid.cpp  utils.cpp  vfat3.cpp
xhal/src/common/: LMDB.cpp
xhal/src/common/rpc/: exceptions.cpp
xhal/src/common/utils/: XHALXMLParser.cpp
xhal/src/server/: LMDB.cpp
xhalarm/: Makefile
xhalcore/: CMakeLists.txt  Makefile
xhalcore/cmake/: FindLogc4plus.cmake  FindXercesC.cmake
xhalcore/include/xhal/: LMDB.h
xhalcore/include/xhal/rpc/: calibration_routines.h  call.h  common.h  compat.h  daq_monitor.h  exceptions.h  gbt.h  helper.h  optohybrid.h  register.h  sca.h  utils.h  vfat3.h
xhalcore/src/common/: XHALInterface.cpp
xhalcore/src/common/rpc/: exceptions.cpp
xhalcore/src/common/rpc_manager/: calibration_routines.cc  daq_monitor.cc  gbt.cc  optohybrid.cc  sca.cc  utils.cc  vfat3.cc
